Style quote and make it responsive

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <!-- Quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">kjjjjjjjjjjdddddddddddddddddddddddddddddddjjjjjjjjjjjjjjjjjjjjjjjjjjj</span>
-            <i class="fas fa-quote-right"></i>
+            <span id="quote">What you are is what you have been. What you'll be is what you do now.</span>
         </div>
         <!-- Author -->
         <div class="quote-author">
